--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MenuListView</string>
+    <string name="detail_button">Pokaż przpis</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dish_name">Nazwa przepisu</string>
+    <string name="dish_recipe">Składniki i sposób przygotowania</string>
 </resources>
